Bug 480932 - File Browser Doesn't Open Folder When Git Isn't Installed
Summary: File Browser Doesn't Open Folder When Git Isn't Installed
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: search (other bugs)
Version First Reported In: 23.08.4
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-06 04:31 UTC by iwant99stats
Modified: 2024-09-28 17:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description iwant99stats 2024-02-06 04:31:32 UTC
SUMMARY

STEPS TO REPRODUCE
1. Don't Install Git 
2. Click Open Folder Button
3. Have a .git subfolder in the parent folder. (ex: parentfolder/.git/)
3. Open the folder

OBSERVED RESULT
Folder browser is blank (specifically the "projects" button)

EXPECTED RESULT
To see files and navigate like a free man.

SOFTWARE/OS VERSIONS
Windows

ADDITIONAL INFORMATION
Thanks for all the hard work! Nvim is a bit meh for me. VS Code too bloated. :)
Comment 1 Christoph Cullmann 2024-03-15 18:14:33 UTC
We rely on git for that.
We might want to better report that git is missing in such cases.
Comment 2 Bug Janitor Service 2024-09-28 11:55:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1603
Comment 3 Christoph Cullmann 2024-09-28 17:57:21 UTC
Git commit 141bb4732d38d578c9d188c8b7b3c628c43f46fa by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 28/09/2024 at 17:52.
Pushed by cullmann into branch 'master'.

project: Emit error if the relevant vcs wasn't found when loading

So that the user knows what happened and can fix the situation

M  +13   -0    addons/project/kateproject.cpp
M  +20   -1    addons/project/kateprojectworker.cpp
M  +9    -6    addons/project/kateprojectworker.h

https://invent.kde.org/utilities/kate/-/commit/141bb4732d38d578c9d188c8b7b3c628c43f46fa