project: Emit error if the relevant vcs wasn't found when loading

So that the user knows what happened and can fix the situation

BUG: 480932